Fix z-index issue with header that made it look weird when the header was in an overlay.

--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -5,8 +5,6 @@
   width: 100%;
 
   .header {
-    z-index: 100 !important;
-
     display: flex;
     justify-content: space-between;
     align-items: center;
